test/expected/cli/cd_suggestion.out
== transposition:
shit: 1:1: error: The directory 'soruce' does not exist.
     1 |  cd soruce
       |  ^~~~~~~~~ here.
note: Did you mean `source`?
== nested path:
shit: 1:1: error: The directory 'project/nseted' does not exist.
     1 |  cd project/nseted
       |  ^~~~~~~~~~~~~~~~~ here.
note: Did you mean `project/nested`?
== directory symlink:
shit: 1:1: error: The directory 'linked-directroy' does not exist.
     1 |  cd linked-directroy
       |  ^~~~~~~~~~~~~~~~~~~ here.
note: Did you mean `linked-directory`?
== quoted suggestion:
shit: 1:1: error: The directory 'space dri' does not exist.
     1 |  cd "space dri"
       |  ^~~~~~~~~~~~~~ here.
note: Did you mean `'space dir'`?
== regular file is excluded:
shit: 1:1: error: The directory 'regular-fiel' does not exist.
     1 |  cd regular-fiel
       |  ^~~~~~~~~~~~~~~ here.
note: Check the spelling or create it with `mkdir -p`.
== distant miss:
shit: 1:1: error: The directory 'nowhere-near' does not exist.
     1 |  cd nowhere-near
       |  ^~~~~~~~~~~~~~~ here.
note: Check the spelling or create it with `mkdir -p`.
